[tool.poetry]
name = "fasolaminutes-parsing"
version = "0.1.0"
description = "Code for Parsing Denson Edition Singings"
authors = ["Mark T. Godfrey"]
readme = "README.md"
packages = [{include = "fasolaminutes_parsing"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.0"
googlemaps = "^4.10.0"
Scrapy = "^2.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
